<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <ImageView
        android:id="@+id/idIVIcon"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_flight" />

    <LinearLayout
        android:id="@+id/idLLLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@+id/idIVIcon"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="𝑻𝒐𝒖𝒓𝒊𝒔𝒎𝒂"
            android:textSize="40sp"
            android:textColor="@color/grey"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/idLLSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/idIVIcon"
        android:layout_centerInParent="true"
        android:layout_marginTop="80dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/idEDTUserNameSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/rounded_edt"
            android:ems="16"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/grey"
            android:textColorHint="@color/grey" />

        <EditText
            android:id="@+id/idEDTPassSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_edt"
            android:ems="16"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/grey"
            android:textColorHint="@color/grey" />

        <EditText
            android:id="@+id/idEDTEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_edt"
            android:ems="16"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/grey"
            android:textColorHint="@color/grey" />

        <EditText
            android:id="@+id/idEDTPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_edt"
            android:ems="16"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:padding="15dp"
            android:textColor="@color/grey"
            android:textColorHint="@color/grey" />

        <Button
            android:id="@+id/idButtonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:backgroundTint="#7FBECD"
            android:text="@string/register"
            android:textColor="@color/grey" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/idLLtoLogin"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Already have an account? "
            android:textColor="@color/black"
            android:gravity="center_vertical|right"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Back to login"
            android:textColor="@color/black"
            android:gravity="center_vertical|right"
            />
    </LinearLayout>

</RelativeLayout>